# self_encryption

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  __init__.py  appveyor.yml  cli.py  deny.toml  index.html  input.txt  integration_tests.rs  lib.rs  pyproject.toml  release-plz.toml  self_encryption-0.1.0-cp311-cp311-macosx_11_0_arm64.whl  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  master.yml  merge.yml  nodejs-publish.yml  nodejs.yml  pr.yml  python-publish.yml  release.yml  tag_release.yml
0.2.0/: search-index.js
0.2.0/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.2.0/asynchronous/: index.html  struct.Deferred.html  struct.EventLoop.html  struct.EventLoopHandler.html  struct.Promise.html
0.2.0/byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html
0.2.0/cbor/: enum.Cbor.html  enum.CborError.html  enum.CborFloat.html  enum.CborSigned.html  enum.CborUnsigned.html  enum.ReadError.html  enum.WriteError.html  index.html  struct.CborBytes.html  struct.CborTag.html  struct.CborTagEncode.html  struct.Decoder.html  struct.DirectDecoder.html  struct.Encoder.html  trait.ToCbor.html  type.CborResult.html
0.2.0/docopt/: enum.Error.html  enum.Value.html  index.html  struct.ArgvMap.html  struct.Decoder.html  struct.Docopt.html
0.2.0/libsodium_sys/: constant.crypto_aead_chacha20poly1305_ABYTES.html  constant.crypto_aead_chacha20poly1305_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_NSECBYTES.html  constant.crypto_auth_BYTES.html  constant.crypto_auth_KEYBYTES.html  constant.crypto_auth_hmacsha256_BYTES.html  constant.crypto_auth_hmacsha512256_BYTES.html  constant.crypto_auth_hmacsha512256_KEYBYTES.html  constant.crypto_auth_hmacsha512_BYTES.html  constant.crypto_box_BOXZEROBYTES.html  constant.crypto_box_MACBYTES.html  constant.crypto_box_NONCEBYTES.html  constant.crypto_box_PRIMITIVE.html  constant.crypto_box_SECRETKEYBYTES.html  constant.crypto_box_SEEDBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BEFORENMBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_MACBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_NONCEBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_PUBLICKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SECRETKEYBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_SEEDBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_ZEROBYTES.html  constant.crypto_core_hsalsa20_INPUTBYTES.html  constant.crypto_core_hsalsa20_KEYBYTES.html  constant.crypto_core_hsalsa20_OUTPUTBYTES.html  constant.crypto_hash_BYTES.html  constant.crypto_onetimeauth_BYTES.html  constant.crypto_onetimeauth_KEYBYTES.html  constant.crypto_pwhash_scryptsalsa208sha256_MEMLIMIT_INTERACTIVE.html  constant.crypto_pwhash_scryptsalsa208sha256_OPSLIMIT_INTERACTIVE.html  constant.crypto_pwhash_scryptsalsa208sha256_SALTBYTES.html  constant.crypto_scalarmult_curve25519_BYTES.html  constant.crypto_secretbox_xsalsa20poly1305_KEYBYTES.html  constant.crypto_secretbox_xsalsa20poly1305_ZEROBYTES.html  constant.crypto_sign_ed25519_SEEDBYTES.html  constant.crypto_sign_edwards25519sha512batch_SECRETKEYBYTES.html  constant.crypto_stream_NONCEBYTES.html  constant.crypto_stream_aes128ctr_KEYBYTES.html  constant.crypto_stream_chacha20_KEYBYTES.html  (+96 more)
0.2.0/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.2.0/regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
0.2.0/self_encryption/: constant.MAX_CHUNK_SIZE.html  constant.MIN_CHUNK_SIZE.html  index.html  struct.SelfEncryptor.html  trait.Storage.html
0.2.0/sodiumoxide/: index.html
0.2.0/strsim/: fn.damerau_levenshtein.html  fn.jaro_winkler.html  fn.levenshtein.html
0.2.1/: index.html  search-index.js
0.2.1/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.2.1/libsodium_sys/: constant.crypto_auth_PRIMITIVE.html  constant.crypto_auth_hmacsha256_KEYBYTES.html  constant.crypto_auth_hmacsha512_KEYBYTES.html  constant.crypto_box_BEFORENMBYTES.html  constant.crypto_box_PUBLICKEYBYTES.html  constant.crypto_box_ZEROBYTES.html  constant.crypto_box_curve25519xsalsa20poly1305_BOXZEROBYTES.html  constant.crypto_core_hsalsa20_CONSTBYTES.html  constant.crypto_hash_PRIMITIVE.html  constant.crypto_hash_sha256_BYTES.html  (+106 more)
0.2.1/sodiumoxide/: fn.init.html
0.2.2/: search-index.js
0.2.3/: search-index.js
0.2.4/: search-index.js
0.2.5/: search-index.js
0.3.0/: search-index.js
0.5.0/: search-index.js
benches/: lib.rs  lib_old.rs
examples/: SelfEncryptorExample.rs  basic_encryptor.rs  old_basic_encryptor.rs  parallel_streaming_decryptor.rs  random_access_decrypt.rs  tmp16qc87
latest/: search-index.js
master/: search-index.js
nodejs/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
nodejs/__test__/: core.spec.mjs  from.spec.mjs  from_storage.spec.mjs
nodejs/npm/darwin-arm64/: README.md  package.json
nodejs/npm/darwin-x64/: README.md  package.json
nodejs/npm/linux-x64-gnu/: README.md  package.json
nodejs/npm/win32-x64-msvc/: README.md  package.json
nodejs/src/: lib.rs  util.rs
scripts/: test.sh
self_encryption/: __init__.py  __main__.py  cli.py
src/: chunk.rs  data_map.rs  datamap.rs  datamap.rs~  decrypt.rs  encrypt.rs  encryption.rs  error.rs  hash.rs  lib.rs  lib.rs~  python.rs  secret_key.rs  self_encryptor.rs  sequencer.rs  storage.rs  stream.rs  stream_decrypt.rs  stream_encrypt.rs  stream_file.rs  stream_old.rs  test_helpers.rs  tests.rs  util.rs  utils.rs
tests/: functor_vs_mem.rs  integration_tests.rs  lib.rs  stream_encryption.rs  stream_vs_mem.rs  test_bindings.py  test_cli.py
(+6345 files in other folders)
