[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Self encrypting files (convergent encryption plus obfuscation)"
documentation = "https://docs.rs/self_encryption"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "self_encryption"
readme = "README.md"
repository = "https://github.com/maidsafe/self_encryption"
version = "0.26.0"

[dependencies]
aes = "~0.7.4"
block-modes = "~0.8.1"
bincode = "1.2.1"
brotli = "3.3.0"
rand = "~0.7.3"
rand_chacha = "~0.2.2"
rayon = "1.5.1"
err-derive = "0.2.4"
num_cpus = "1.13.0"
itertools = "~0.10.0"
xor_name = "3.1.0"

  [dependencies.bytes]
  version = "1.0.1"
  features = [ "serde" ]

  [dependencies.serde]
  version = "1.0.97"
  features = [ "derive" ]

  [dependencies.tiny-keccak]
  version = "2.0.2"
  features = [ "sha3" ]

  [dependencies.tokio]
  version = "1.6.0"
  features = [ "macros", "sync", "io-util", "rt", "rt-multi-thread" ]

[dev-dependencies]
criterion = "~0.3"
docopt = "~0.9.0"

[[example]]
bench = false
name = "basic_encryptor"

[[bench]]
name = "lib"
harness = false
