[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Self encrypting files (convergent encryption plus obfuscation)"
documentation = "https://docs.rs/self_encryption"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "self_encryption"
readme = "README.md"
repository = "https://github.com/maidsafe/self_encryption"
version = "0.27.5"

[dependencies]
aes = "~0.8.1"
bincode = "~1.3.3"
rand = "~0.8.5"
rand_chacha = "~0.3.1"
rayon = "1.5.1"
err-derive = "~0.3.1"
num_cpus = "1.13.0"
itertools = "~0.10.0"
xor_name = "5.0.0"

  [dependencies.brotli]
  version = "~3.3.0"
  default-features = false
  features = [ "std" ]

  [dependencies.cbc]
  version = "~0.1.1"
  features = [ "alloc", "block-padding" ]

  [dependencies.bytes]
  version = "1.1.0"
  features = [ "serde" ]

  [dependencies.serde]
  version = "1.0.136"
  features = [ "derive" ]

  [dependencies.tiny-keccak]
  version = "2.0.2"
  features = [ "sha3" ]

  [dependencies.tokio]
  version = "1.17.0"
  features = [ "macros", "sync", "io-util", "rt", "rt-multi-thread" ]

[dev-dependencies]
criterion = "~0.3"
docopt = "~0.9.0"

[[example]]
bench = false
name = "basic_encryptor"

[[bench]]
name = "lib"
harness = false
