[build-system]
# requires = ["maturin>=1.0,<2.0"] # TODO: remove this once twine can handle metadata 2.4
requires = ["maturin>=1.7.5"]
build-backend = "maturin"

[project]
name = "self_encryption"
version = "0.1.0"
description = "Self-encryption library with convergent encryption and obfuscation"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
self_encryption = "self_encryption.cli:cli"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "self_encryption"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
