[package]
edition = "2024"
name = "self-encryption-nodejs"
version = "0.1.0"
description = "NodeJS bindings for Self Encryption"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
hex = "0.4.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "napi6", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
neon = "1.0.0"
self_encryption = { version = "0.31.0", path = ".." }
serde_json = "1.0.140"

[build-dependencies]
napi-build = "2.0.1"
