[package]
edition = "2024"
name = "self-encryption-nodejs"
version = "0.1.0"
description = "NodeJS bindings for Self Encryption"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "napi6", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
self_encryption = { version = "0.34.1", path = ".." }

[build-dependencies]
napi-build = "2.0.1"
